tests/fixtures/invalid/pow_str_float_str.py
# Cannot call pow() with Str, Float, Str
x = pow("hello", 1.0, "hello")
